--- a/frontend/my-app/src/App.css
+++ b/frontend/my-app/src/App.css
@@ -8,11 +8,20 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 10vh;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-body {
+  background-color: #8c91a4;
+  min-height: 90vh;
+  display: flex;
+  flex-direction: column;
   font-size: calc(10px + 2vmin);
   color: white;
 }
