Adding boostrap part 2

--- a/frontend/my-app/src/App.css
+++ b/frontend/my-app/src/App.css
@@ -23,8 +23,8 @@
 }
 
 .App-section {
-  flex: 1;
-  border: medium solid red;
+  padding-top: 20px;
+  padding-bottom: 40px;
 }
 
 .Card-container {
